--- a/config/database.yml
+++ b/config/database.yml
@@ -14,12 +14,12 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password:
+  password: f
   socket: /tmp/mysql.sock
 
 development:
   <<: *default
-  database: enrollment_development
+  database: enrollment
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
